每日一提交,专业修复bug第4天

--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -26,3 +26,9 @@
         cursor: pointer !important;
     }
 }
+
+@mixin textOverflow(){
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
